--- a/dklet/lib/template/dklet.erb
+++ b/dklet/lib/template/dklet.erb
@@ -5,7 +5,7 @@ Note
 # https://docs.docker.com/develop/develop-images/dockerfile_best-practices
 write_dockerfile <<~Desc
   FROM alpine:3.7
-  LABEL <%=image_labels%>
+  LABEL <%%=image_labels%>
 Desc
 
 task :main do
@@ -24,4 +24,4 @@ custom_commands do
   end
 end
 
-# Generated with dklet version: 0.1.0
+# Generated with dklet version: <%=Dklet.version%>
